tests/parser-test-files/bad-files/parse-body.5.error
error: Malformed shorthand let
  --> test:6:15
   |
 6 |      (let x = 1 2)
   |                 ^ unexpected trailing form
